src/styles/globals.css
@import "tailwindcss";

@tailwind utilities;

@layer base {
  html {
    scroll-behavior: smooth;
  }
}

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

a.animated-link {
  position: relative;
}

a.animated-link::after {
  content: "";
  position: absolute;
  width: 0;
  left: 0;
  bottom: -2px;
  height: 1px;
  background: black;
  transition: width 0.2s;
}

a.animated-link:hover::after {
  width: 100%;
}

html {
  scroll-behavior: smooth;
}

